--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,9 @@
-<h1>{{title}}</h1>
+<app-nav></app-nav>
 
-<ol >
-    <li *ngFor="let user of users">{{user.id}} {{user.userName}}</li>
-</ol>
+<div class = "container">
+    <app-home></app-home>
+    <!-- <h1>{{title}}</h1>
+    <ol >
+        <li *ngFor="let user of users">{{user.id}} {{user.userName}}</li>
+    </ol> -->
+</div>
