--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-nav></app-nav>
 
 <div class = "container">
-    <app-home></app-home>
+    <router-outlet></router-outlet>
     <!-- <h1>{{title}}</h1>
     <ol >
         <li *ngFor="let user of users">{{user.id}} {{user.userName}}</li>
