--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,26 +1,28 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">The App</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <a class="navbar-brand" routerLink="/">The App</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto" *ngIf = "accountService.currentUser$ | async">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Matches <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Lists</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Messages</a>
-        </li>
+      <ul class="navbar-nav mr-auto" >
+        <ng-container *ngIf = "accountService.currentUser$ | async">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
+          </li>
+        </ng-container>
       </ul>
 
-      <div class="navbar-nav mr-auto"  *ngIf = "accountService.currentUser$ | async" dropdown>
+      <div class="navbar-nav mr-auto"  *ngIf = "(accountService.currentUser$ | async) as user" dropdown>
          <div class="dropdown" dropdownToggle>
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-            Welcome {{model.username}}
+            Welcome {{user.username | titlecase}}
           </a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
             <a class="dropdown-item" href="#">Edit Profile</a>
@@ -32,7 +34,7 @@
       <form #loginForm = "ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()" autocomplete = "off"  *ngIf = "(accountService.currentUser$ | async) === null">
         <input name = "username" [(ngModel)] = "model.username" class="form-control mr-sm-2" type="text" placeholder="Username" aria-label="Username">
         <input name = "password" [(ngModel)] = "model.password" class="form-control mr-sm-2" type="password" placeholder="Password" aria-label="Password">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+        <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
       </form>
     </div>
   </nav>
