--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,9 @@
+<ngx-spinner>
+    <h3> Loading </h3>
+</ngx-spinner>
+
 <app-nav></app-nav>
 
 <div class = "container">
     <router-outlet></router-outlet>
-    <!-- <h1>{{title}}</h1>
-    <ol >
-        <li *ngFor="let user of users">{{user.id}} {{user.userName}}</li>
-    </ol> -->
 </div>
