--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,9 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-    <a class="navbar-brand" routerLink="/">The App</a>
+  <div class="navbar-header">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+    <a class="navbar-brand" routerLink="/">The App</a>
+  </div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto" >
         <ng-container *ngIf = "accountService.currentUser$ | async">
@@ -28,7 +29,7 @@
             Welcome {{user.username | titlecase}}
           </a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
-            <a class="dropdown-item" href="#">Edit Profile</a>
+            <a class="dropdown-item" href="#" routerLink="/member/edit">Edit Profile</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" (click) = "logout()">Logout</a>
           </div>
