--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -54,6 +54,9 @@
                 <h4>Interests</h4>
                     <textarea class="form-control" [(ngModel)]="member.interests" name="interests" rows="6"></textarea>
             </tab>
+            <tab heading="Photos">
+                <app-photo-editor [member]="member"></app-photo-editor>
+            </tab>
           </tabset>
     </div>
 </div>
