--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,30 +1,61 @@
 <div class="container">
     <div class="row justify-content-center">
-        <form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+        <form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && register()" autocomplete="off">
             <div class="form-group">
                 <h2>Sign up now!</h2>
             </div>
-            <div class="form-group">
-                <div class="row">
-                    <div class="col">
-                        <input type="text" name="Username" [(ngModel)]="model.username" class="form-control" placeholder="Username">
+            <div class="row">
+                <div class="col">
+                    <app-text-input [formControl]="registerForm.controls['username']" [label]="'Username'" [type]="'text'"></app-text-input>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <app-text-input [formControl]="registerForm.controls['knownAs']" [label]="'Known As'" [type]="'text'"></app-text-input>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label class="control-label">I am a:</label>
+                        <label class="radio-inline">
+                            <input type="radio" value="male" formControlName="gender" class="ml-3">Male
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" value="female" formControlName="gender" class="ml-3">Female
+                        </label>
                     </div>
                 </div>
+                <div class="col">
+                    <app-date-input [formControl]="registerForm.controls['dateOfBirth']" [label]="'Date of birth'" [maxDate]="maxDate"></app-date-input>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <app-text-input [formControl]="registerForm.controls['city']" [label]="'City'" [type]="'text'"></app-text-input>
+                </div>
+                <div class="col">
+                    <app-text-input [formControl]="registerForm.controls['country']" [label]="'Country'" [type]="'text'"></app-text-input>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <app-text-input [formControl]="registerForm.controls['password']" [label]="'Password'" [type]="'password'"></app-text-input>
+                </div>
+                <div class="col">
+                    <app-text-input [formControl]="registerForm.controls['confirmPassword']" [label]="'Confirm Password'" [type]="'password'"></app-text-input>
+                </div>
+            </div>
+            <div class="row mt-5" *ngIf="validationErrors.length > 0">
+                <ul class="text-danger">
+                    <li *ngFor="let error of validationErrors">{{error}}</li>
+                </ul>
             </div>
             <div class="form-group">
                 <div class="row">
                     <div class="col">
-                    <input type="password" name="Password" [(ngModel)]="model.password" class="form-control" placeholder="Password">
-                    </div>
-                    <div class="col">
-                    <input type="password" name="Confirm Password" [(ngModel)]="model.confPassword" class="form-control" placeholder="Confirm Password">
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="row">
-                    <div class="col">
-                        <button class="btn btn-success mr-2" type="submit">Register</button>
+                        <button class="btn btn-success mr-2" type="submit"
+                            [disabled]="!registerForm.valid">Register</button>
                     </div>
                     <div class="col">
                         <button class="btn btn-warning mr-2" type="button" (click)="cancel()">Cancel</button>
