--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -5,6 +5,10 @@
                 class="card-img-top img-thumbnail">
             <div class="card-body">
                 <div>
+                    <strong>Gender:</strong>
+                    <p>{{member.gender}}</p>
+                </div>
+                <div>
                     <strong>Location:</strong>
                     <p>{{member.city}}, {{member.country}}</p>
                 </div>
@@ -14,7 +18,7 @@
                 </div>
                 <div>
                     <strong>Last Active:</strong>
-                    <p>{{member.lastActive | date}}</p>
+                    <p>{{member.lastActive | timeago}}</p>
                 </div>
                 <div>
                     <strong>Member Since:</strong>
@@ -36,6 +40,8 @@
                 <p>{{member.introduction}}</p>
                 <h4>Looking for</h4>
                 <p>{{member.lookingFor}}</p>
+                <h4>Preference:</h4>
+                <p>{{member.preferenceGender}}</p>
             </tab>
             <tab heading="Interests">
                 <h4>Interests</h4>
