--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -11,6 +11,10 @@
                 class="card-img-top img-thumbnail">
             <div class="card-body">
                 <div>
+                    <strong>Gender:</strong>
+                    <p>{{member.gender}}</p>
+                </div>
+                <div>
                     <strong>Location:</strong>
                     <p>{{member.city}}, {{member.country}}</p>
                 </div>
@@ -40,6 +44,13 @@
                     <textarea class="form-control" [(ngModel)]="member.introduction" name="introduction" rows="6"></textarea>
                     <h4>Looking for</h4>
                     <textarea class="form-control" [(ngModel)]="member.lookingFor" name="lookingFor" rows="6"></textarea>
+                    <div class="form-inline">
+                        <label for="preferenceGender">Gender Preference:</label>
+                        <select class="form-control" name="preferenceGender" [(ngModel)]="member.preferenceGender">
+                            <option></option>
+                            <option *ngFor="let gender of genderList" value="{{gender.value}}">{{gender.label}}</option>
+                        </select>
+                    </div>
                     <h4>Location Details:</h4>
                     <div class="form-inline">
                         <label for="city">City:</label>
