--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -6,7 +6,7 @@
                 <button class="btn btn-primary" routerLink="/members/{{member.userName}}">
                     <i class="fa fa-user"></i>
                 </button>
-                <button class="btn btn-primary">
+                <button class="btn btn-primary" (click) = "addLike(member)">
                     <i class="fa fa-heart"></i>
                 </button>
                 <button class="btn btn-primary">
