--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -4,6 +4,9 @@
             <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}"
                 class="card-img-top img-thumbnail">
             <div class="card-body">
+                <div class="mb-2" *ngIf="isOnline">
+                    <i class="fa fa-user-circle text-success"></i> Online
+                </div>
                 <div>
                     <strong>Gender:</strong>
                     <p>{{member.gender}}</p>
@@ -51,7 +54,7 @@
                 <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery" style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
             </tab>
             <tab heading="Messages" (selectTab)="onTabActivated($event)">
-                <app-member-messages [username]="member.userName" [messages]="messages" ></app-member-messages>
+                <app-member-messages [username]="member.userName"></app-member-messages>
             </tab>
           </tabset>
     </div>
