--- a/client/src/app/admin/photo-management/photo-management.component.html
+++ b/client/src/app/admin/photo-management/photo-management.component.html
@@ -1,1 +1,28 @@
-<p>photo-management works!</p>
+<div class="container">
+        <div class="row">
+            <div *ngIf="photos?.length == 0"><h1>NO PHOTOS TO APPROVE</h1></div>
+            <div class="col-3" *ngFor="let photo of photos">
+                <div style="cursor:pointer;" (click)="openPhotoModal(photo)">
+                    <img src="{{photo.url}}" alt="" class="img-approve"/>
+                </div>
+                <input type="checkbox" btnRadio="photo.id" class="form-check-input" value="true" [checked]="photo.marked" (change)="photo.marked = !photo.marked" >
+                <span>Select this photo</span>
+            </div>
+        </div>
+        <div class="btn-group mt-3">
+            <button class="btn btn-success" (click)="approve(true)">Mass Approve</button>
+            <button class="btn btn-danger" (click)="approve(false)">Mass Reject</button>
+        </div>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination 
+        [boundaryLinks]="true" 
+        [totalItems]="pagination.totalItems"
+        [itemsPerPage]="pagination.itemsPerPage"
+        [(ngModel)]="pagination.currentPage"
+        (pageChanged)="pageChanged($event)"
+        previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+
+    </pagination>
+</div>
