--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -1,7 +1,12 @@
 <div class="row ">
     <div class="col-2" *ngFor="let photo of member.photos">
-        <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-1"/>
-        <div class="text-center">
+        <div class="pic">
+            <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-1 {{!photo.isApproved ? 'blur' : ''}}"/>
+            <span class="img-text"
+                *ngIf="!photo.isApproved"
+            >FOR APPROVAL</span>
+        </div>
+        <div class="btn-group" role="group">
             <button class="btn btn-sm" 
                 (click)="setMainPhoto(photo)"
                 [disabled]="photo.isMain"
